<resources>
    <string name="app_name">Signal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  GOOGLE DRIVE EXAMPLE STRINGS -->
    <string name="google_drive_example_welcome_title">Welcome to Google Drive Example</string>
    <string name="google_drive_example_text_subheader">Please Sign in to continue</string>

    <string name="sign_in">Sign in</string>

    <string name="create_file">Create File</string>
    <string name="update_file">Update File/Backup</string>
    <string name="read_file">Read File</string>
    <string name="google_drive_fragment">Google Drive Fragment</string>
    <!--    <string name="create_file">Create File</string>-->
<!--    <string name="create_file">Create File</string>-->
</resources>