<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/example_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <Button-->
    <!--        android:id="@+id/button_first"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/next"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/textview_first" />-->

    <TextView
        android:id="@+id/example_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_drive_example_welcome_title"
        android:textColor="#5f6368"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/primary_btn_tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example_title" />

    <Button
        android:id="@+id/create_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_file"
        android:visibility="gone"
        android:backgroundTint="@color/primary_btn_tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example_title" />

    <Button
        android:id="@+id/read_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_file"
        android:visibility="gone"
        android:backgroundTint="@color/primary_btn_tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_file"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/update_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_file"
        android:visibility="gone"
        android:backgroundTint="@color/primary_btn_tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/read_file"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>